test/corpus/comments.txt
================================================================================
Line and block comments
================================================================================

// a line comment
def f {
    /* a block
       comment */
    dup // trailing
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (function_definition
    name: (identifier)
    (block
      (comment)
      (identifier)
      (comment))))
