test/corpus/expressions.txt
================================================================================
Literals quotations references and lists
================================================================================

def demo {
    42 -17 3.14 0xFF 10u32 -1i8
    'a' '\n'
    "text"
    \dup
    \{ dup swap }
    [ 1i64 2i64 ]
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (block
      (number)
      (number)
      (number)
      (number)
      (number)
      (number)
      (char)
      (char)
      (string
        (string_content))
      (function_reference
        (identifier))
      (quotation
        (block
          (identifier)
          (identifier)))
      (list
        (number)
        (number)))))
