test/corpus/functions.txt
================================================================================
External, public and nested definitions
================================================================================

defx + (I64 I64 -> I64)

def main( -> I32) {
    0i32
}

def to_string (I64 -> String) {
    defp go (String I64 -> String) {
        dup
    }
    "" swap go
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (operator)
    (function_signature
      (type_list
        (type_reference
          (identifier))
        (type_reference
          (identifier)))
      (type_list
        (type_reference
          (identifier)))))
  (function_definition
    name: (identifier)
    (function_signature
      (type_list
        (type_reference
          (identifier))))
    (block
      (number)))
  (function_definition
    name: (identifier)
    (function_signature
      (type_list
        (type_reference
          (identifier)))
      (type_list
        (type_reference
          (identifier))))
    (block
      (function_definition
        name: (identifier)
        (function_signature
          (type_list
            (type_reference
              (identifier))
            (type_reference
              (identifier)))
          (type_list
            (type_reference
              (identifier))))
        (block
          (identifier)))
      (string)
      (identifier)
      (identifier))))

================================================================================
Operator and higher-order signatures
================================================================================

def && (Boolean Boolean -> Boolean) { touch }
def map (Result<a b> (a -> c) -> Result<c b>) { swap }

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (operator)
    (function_signature
      (type_list
        (type_reference
          (identifier))
        (type_reference
          (identifier)))
      (type_list
        (type_reference
          (identifier))))
    (block
      (identifier)))
  (function_definition
    name: (identifier)
    (function_signature
      (type_list
        (type_reference
          (identifier)
          (type_arguments
            (type_reference
              (identifier))
            (type_reference
              (identifier))))
        (function_type
          (type_list
            (type_reference
              (identifier)))
          (type_list
            (type_reference
              (identifier)))))
      (type_list
        (type_reference
          (identifier)
          (type_arguments
            (type_reference
              (identifier))
            (type_reference
              (identifier))))))
    (block
      (identifier))))

